test/conformance/kuttl/webhooks/unknown-kind/01-policy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
  - file: policy-1.yaml
    shouldFail: true
  - file: policy-2.yaml
    shouldFail: true
  - file: policy-3.yaml
    shouldFail: true
  - file: policy-4.yaml
    shouldFail: true
