test/conformance/kuttl/webhooks/unknown-kind/02-unknown-kind-subresource.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
  - file: policy-2.yaml
    shouldFail: true
