test/conformance/kuttl/webhooks/unknown-kind/03-wrong-version.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
  - file: policy-3.yaml
    shouldFail: true
