test/conformance/kuttl/webhooks/unknown-kind/04-unknown-subresource.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
  - file: policy-4.yaml
    shouldFail: true
